--- a/spring-mvc/src/main/resources/messages.properties
+++ b/spring-mvc/src/main/resources/messages.properties
@@ -1,2 +1,4 @@
 NotNull.tipoProduto.valorMinimo = Valor mínimo não pode ser vazio.
 tipoProduto.title=Tipo de produto
+produto.title=Produto
+bad_credentials=Usuário ou senha inválido
